clusters/takeout/apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  annotations: {}
    # fluxcd.io/ignore: "true"
  labels:
    app: nextcloud
spec:
  replicas: 1 # active longhorn
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      annotations: {}
        # linkerd.io/inject: enabled
      labels:
        app: nextcloud
    spec:
      # affinity:
      #   podAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: app
      #           operator: In
      #           values:
      #           - nextcloud-cache
      #       topologyKey: kubernetes.io/hostname
      containers:
      - name: nextcloud
        image: nextcloud:21.0.1
        imagePullPolicy: Always
        # command: ["tail","-f","/dev/null"]
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - mountPath: "/var/www/html"
            name: nextcloud-data
        resources:
          requests:
            cpu: 100m
          limits:
            memory: 2Gi
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
      imagePullSecrets:
        - name: docker-hub
