clusters/takeout/apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  type: NodePort
  selector:
    app: nextcloud
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
spec:
  type: NodePort
  selector:
    app: nextcloud-db
  ports:
    - name: tcp-mariadb
      protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-cache
spec:
  type: ClusterIP
  selector:
    app: nextcloud-cache
  ports:
    - name: tcp-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
